# spicy

./: Alphabet  CMakeLists.txt  LICENSE  README.md  alphabet_parser.c
cmake/: CMakeLists.txt
include/: alpha.h  alphabeta.h  beta.h  delta.h  gamma.h  omega.h  pi.h
include/delta/: deck.h  hash_table.h  queue.h  stack.h  vec.h
sandbox/: main.c  pipeline.c  pipeline.h  scene.h  tests_lol
sandbox/scenes/: cube.c  quad.c  star.c  triangle.c
sandbox/stuff/: ndc.h  primitive_list.h
src/: alpha.c  alphabeta.c  gamma.c
src/gamma/: alphabet.c
